--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cookie": "^1.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "nodemon": "^3.1.9",
     "password-hash": "^1.2.2"
